[gd_scene load_steps=38 format=2]

[ext_resource path="res://content/gadgets/orchard/hud/fruit_woxt.png" type="Texture" id=1]
[ext_resource path="res://content/gadgets/orchard/hud/fruit_backgroundborder-Sheet.png" type="Texture" id=2]
[ext_resource path="res://content/gadgets/orchard/hud/OrchardHud.gd" type="Script" id=3]
[ext_resource path="res://content/gadgets/orchard/hud/fruit_ossewoxt.png" type="Texture" id=4]
[ext_resource path="res://content/gadgets/shield/hud/charge.png" type="Texture" id=5]
[ext_resource path="res://content/gadgets/shield/hud/charge_slot.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 80, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 112, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 144, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 176, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 208, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 224, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 240, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 256, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 272, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 288, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 304, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 320, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 64, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 80, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 96, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "producing",
"speed": 10.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": false,
"name": "empty",
"speed": 0.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": false,
"name": "ready",
"speed": 0.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "consuming",
"speed": 10.0
} ]

[node name="OrchardHud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1909.0
margin_bottom = -1069.0
script = ExtResource( 3 )
size = Vector2( 3, 3 )
layoutWeights = Vector2( 0, 5 )
layoutPriority = 10

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 9, 9 )
frames = SubResource( 31 )
animation = "ready"
playing = true

[node name="PlantGrowing" type="Sprite" parent="Background"]
visible = false
position = Vector2( -7, -7 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 14, 14 )

[node name="PlantEating" type="Sprite" parent="Background"]
position = Vector2( -7, -3 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 4, 14, 10 )

[node name="Slot1" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 1.0
margin_right = 14.0
margin_bottom = 5.0
texture = ExtResource( 6 )

[node name="Charge1" type="TextureRect" parent="Slot1"]
margin_right = 7.0
margin_bottom = 7.0
texture = ExtResource( 5 )
